inadvertantly added a11y issues with visibility attr. removed off screen element and replaced with ari-label

--- a/public/scss/partials/global/_reset.scss
+++ b/public/scss/partials/global/_reset.scss
@@ -395,7 +395,7 @@ table {
     position: absolute;
     left: -99999px;
     top: 0;
-    visibility: hidden;
+    opacity: 0;
 }
 
 .bold {
